--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@
                         fill="#F53838" />
                 </svg>
             </div>
-            <div>
+        <div>
     </section>
 
     <section id="subrice">
@@ -498,7 +498,7 @@
                     </svg></li>
             </ul>
         </div>
-        
+        <div class="list-ctn">
         <ul class="list">
             <h1 class="list-title">Product</h1>
             <li class="item">Download</li>
@@ -524,7 +524,7 @@
             <li class="item">Become partner</li>
             <li class="item">Affilite</li>
         </ul>
-        
+        </div>
     </section>
 </body>
 </head>
